# dsc-py-sdk

./: README.md  pyproject.toml  requirements.txt  setup.py
dsc_sdk/: client.py  converters.py  delegation.py  evm_contract.py  evm_service.py  multisig.py  nft.py  subscriptions.py  test_wallet.py  tokens.py  utils.py  validators.py  wallet.py
dsc_sdk/tests/: test_client.py
