[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsc-py-sdk"
version = "0.1.0"
description = "Python SDK for Decimal Smart Chain EVM"

dependencies = [
    "ethereum==1.0.0",
    "web3==5.31.1",
    "cosmospy==0.1.0",
    "click==8.1.3",
]

[project.urls]
homepage = "https://github.com/maxwell2010/dsc-py-sdk.git" 

[project.authors]
name = "Maxwell"
email = "Maxwell2010@yandex.ru"
