[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsc-py-sdk"
version = "0.1.0"
description = "Python SDK for Decimal Smart Chain EVM"
authors = [
    { name = "Maxwell", email = "Maxwell2010@yandex.ru" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
    "eth-account>=0.5.7",
    "eth-keys>=0.4.0",
    "eth-utils>=1.10.0",
    "web3>=5.31.1",
    "bech32==1.2.0",
    "pytest>=7.4.0",
    "gevent>=22.10.0",
]

[tool.setuptools.packages.find]
where = [".", "dsc_sdk"]
